--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlx = { version = "0.5.9", default-features = false, features = [
-    "runtime-tokio-native-tls",
-    "macros",
-    "uuid",
-    "postgres",
-    "chrono",
-    "tls",
-] }
-tokio = "1.32.0"
+# sqlx = { version = "0.5.9", default-features = false, features = [
+#     "runtime-tokio-native-tls",
+#     "macros",
+#     "uuid",
+#     "postgres",
+#     "chrono",
+#     "tls",
+# ] }
+# tokio = "1.32.0"
+clap = "2"
