--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlx = { version = "0.5.9",  default-features = false, features = [
-    "postgres",
-    "runtime-tokio-native-tls",
-    "macros",
-] }
-tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "sync"] }
-clap = "2"
-
-[build-dependencies]
-syn = "1"
+clap = "4.4.6"
+sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls" ] }
